<resources>
    <string name="app_name">옷질도우미</string>
    <string name="sign_in">로그인</string>
    <string name="starts_with_google_email">구글 이메일로 시작하기</string>
    <string name="sign_up_with_email">이메일로 가입하기</string>
    <string name="or">or</string>
    <string name="email">이메일</string>
    <string name="email_place_holder">example@example.com</string>
    <string name="password">비밀번호</string>
    <string name="error_invalid_email">이메일 형식이 올바르지 않아요. 😕️</string>
    <string name="error_user_not_found">이메일을 찾을 수 없어요. 😥</string>
    <string name="nickname">닉네임</string>
    <string name="sign_up">가입하기</string>
    <string name="error_password_confirm_not_same">⚠️ 비밀번호가 일치하지 않아요.</string>
    <string name="error_weak_password">⚠️ 비밀번호는 6자리 이상만 가능해요.</string>
    <string name="error_email_already_in_use">이미 사용중인 이메일이에요. 😥</string>
    <string name="sign_in_complete">로그인 되었습니다. 😊</string>
    <string name="sign_up_complete">이메일로 가입되었습니다. 😊</string>
    <string name="google_sign_in_complete">구글 이메일로 로그인 되었습니다. 😊</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="email_send_complete">이메일이 전송되었습니다. 😊</string>
    <string name="reset_password_text">가입하신 이메일을 입력해주세요.\n비밀번호 재설정 이메일이 발송됩니다.</string>
    <string name="send">보내기</string>
    <string name="check">확인</string>
    <string name="see_all">모두 보기</string>
    <string name="trash">휴지통</string>
    <string name="top">TOPs</string>
    <string name="bottom">BOTTOMs</string>
    <string name="outer">OUTERs</string>
    <string name="etc">ETC</string>
    <string name="favorite">즐겨찾기</string>
    <string name="unknown_error">알 수 없는 이유로 실패하였습니다. 😥</string>
    <string name="too_many_requst_error">잠시 후 다시 시도해 주세요. 😥</string>
    <string name="network_error">인터넷 연결을 확인해 주세요. 😥</string>
    <string name="network_error_for_add_sub_category">카테고리를 추가할 수 없습니다. 😥\n인터넷 연결을 확인해 주세요‼️</string>
    <string name="network_error_for_add_folder">폴더를 추가할 수 없습니다. 😥\n인터넷 연결을 확인해 주세요‼️</string>
    <string name="network_error_for_edit_sub_category">카테고리를 수정할 수 없습니다. 😥\n인터넷 연결을 확인해 주세요‼️</string>
    <string name="network_error_for_edit_folder">폴더를을 수정할 수 없습니다. 😥\n인터넷 연결을 확인해 주세요‼️</string>
    <string name="error_wrong_password">⚠️ 비밀번호를 확인해주세요.</string>
    <string name="category">카테고리</string>
    <string name="category_place_holder">ex) 반팔, 긴팔, 셔츠</string>
    <string name="folder_place_holder">ex) 브랜드, 핏, 반품</string>
    <string name="cancel">취소</string>
    <string name="error_exist_category_name">이미 존재하는 카테고리 입니다.</string>
    <string name="error_exist_folder_name">이미 존재하는 폴더 입니다.</string>
    <string name="sign_out">로그아웃</string>
    <string name="add_category">카테고리 추가</string>
    <string name="add_folder">폴더 추가</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="canceled">취소되었습니다. 🙄</string>
    <string name="main_screen">메인 화면</string>
    <string name="data_load_failed">데이터를 가져올 수 없습니다. 😥</string>
    <string name="categories">%1d categories</string>
    <string name="folders_charts">%1d folders, %2d charts</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="add_category_failed">카테고리 추가에 실패하였습니다. 😥</string>
    <string name="add_folder_failed">폴더 추가에 실패하였습니다. 😥</string>
    <string name="edit_category_name_failed">카테고리 수정에 실패하였습니다. 😥</string>
    <string name="edit_folder_name_failed">폴더 수정에 실패하였습니다. 😥</string>
    <string name="edit_category">카테고리 수정</string>
    <string name="edit_folder">폴더 수정</string>
    <string name="folder">폴더</string>
    <string name="count_selected">%1d개 선택됨</string>
    <string name="sort_name">이름</string>
    <string name="sort_create_date">생성</string>
    <string name="sort_edit_date">수정</string>
...
