...
import com.leebeebeom.clothinghelper.ui.component.MaxWidthButton
import com.leebeebeom.clothinghelper.ui.main.component.ToastWrapper
import com.leebeebeom.clothinghelper.ui.signin.component.SignInBaseColumn
import com.leebeebeom.clothinghelper.ui.signin.component.textfield.EmailTextField
import com.leebeebeom.clothinghelper.ui.signin.state.EmailState

const val ResetPasswordScreenTag = "reset password screen"

@Composable
fun ResetPasswordScreen(
    onEmailSendSuccess: () -> Unit
) {
    val viewModel = hiltViewModel<ResetPasswordViewModel>()
...
