...
import com.leebeebeom.clothinghelper.ui.signin.component.OrDivider
import com.leebeebeom.clothinghelper.ui.signin.component.SignInBaseColumn
import com.leebeebeom.clothinghelper.ui.signin.component.textfield.EmailTextField
import com.leebeebeom.clothinghelper.ui.signin.component.textfield.PasswordTextField
import com.leebeebeom.clothinghelper.ui.signin.state.PasswordState

const val SignInScreenTag = "sign in screen"

@Composable
fun SignInScreen(
    onForgotPasswordClick: () -> Unit,
    onSignUpWithEmailClick: () -> Unit,
) {
...
