...
import com.leebeebeom.clothinghelper.ui.signin.component.OrDivider
import com.leebeebeom.clothinghelper.ui.signin.component.SignInBaseColumn
import com.leebeebeom.clothinghelper.ui.signin.component.textfield.EmailTextField
import com.leebeebeom.clothinghelper.ui.signin.component.textfield.PasswordTextField
import com.leebeebeom.clothinghelper.ui.signin.state.PasswordState

const val SignUpScreenTag = "sign up screen"

@Composable
fun SignUpScreen() {
    val viewModel = hiltViewModel<SignUpViewModel>()
    val state = rememberSignUpState()
    val uiState by viewModel.uiState.collectAsStateWithLifecycle()
...
